--- a/index.html
+++ b/index.html
@@ -25,14 +25,20 @@
     <link href="./css/style.css" rel="stylesheet">
 
     <!--  Main JS File -->
+    <script src="./js/library.js"></script>
     <script src="./js/script.js" defer></script>
 
     <title>Campo Minato</title>
 </head>
 <body>
     <header class="d-flex justify-content-around align-items-center text-white">
-        <img src="./img/mine.png" alt="">
-        <h1>Campo Minato</h1>
+        <div class="d-flex align-items-center">
+            <a class="navbar-brand fs-2 text-uppercase" href="#">
+                <img src="./img/mine.png" width="50" height="50" class="d-inline-block align-top "
+                    alt="">
+                Campo Minato!
+            </a>
+        </div>
         <div class="d-flex">
             <select class="form-select fw-bold " name="livello" id="level">
                 <!-- <option selected>Seleziona il livello</option> -->
@@ -49,7 +55,7 @@
         </div>
     </main>
     <footer class="d-flex justify-content-around align-items-center text-white">
-        <p>Made with &hearts; by Boolean</p>
+        <p>Made with <span class="heart">&hearts;</span> by Boolean</p>
     </footer>
 </body>
 </html>
